# SGA

./: CMakeLists.txt  SGA_array.h  dash_board.cpp  dash_board.h  dataBase.cpp  dataBase.h  final_grades.cpp  final_grades.h  final_grades.ui  home_page.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  semester_progress.cpp  semester_progress.h  sga.h
.github/.workflows/: build.yml
.github/workflows/: build.yml
